Poylclinic API'si entegre edildi. Kartlar güncellenecek.

--- a/Frontend/MedLink-App/src/Polyclinics.css
+++ b/Frontend/MedLink-App/src/Polyclinics.css
@@ -13,7 +13,7 @@
     left: 70px;
   }
 
-.doctors {
+.polyclinics {
     width: 100%;
     position: relative;
     background-color: var(--white);
