--- a/Frontend/MedLink-App/src/Doctors.css
+++ b/Frontend/MedLink-App/src/Doctors.css
@@ -1,31 +1,72 @@
+.doctor-card-background {
+  align-self: stretch;
+  flex: 1;
+  position: relative;
+  border-radius: var(--br-8xs) var(--br-8xs) 0 0;
+  max-width: 100%;
+  overflow: hidden;
+  max-height: 100%;
+  object-fit: cover;
+}
+.doctor-name-background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  margin: 0 !important;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: var(--accent);
+}
+.doctors-name32 {
+  position: relative;
+  line-height: 140%;
+  z-index: 1;
+}
+.doctors-name-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 0 var(--padding-11xs);
+}
+.neurology32 {
+  position: relative;
+  letter-spacing: 0.16em;
+  text-transform: uppercase;
+  font-weight: 700;
+  z-index: 1;
+}
 
-.card{
-    border: 1px solid rgb(173, 173, 173);
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px #AAABB8(70, 127, 250);
-    background:linear-gradient(to bottom, #2E9CCA 0%, #25274d 100%);
-    padding: 25px;
-    margin: 15px;
-    text-align: center;
-    max-width: 275px;
-    display: inline-block;
-    height: 350px;
-  }
-  
-  .card .card-image{
-    max-width: 80%;
-    height: auto;
-    border-radius: 50%;
-    margin-bottom: 10px;
-  }
-  
-  .card .card-title{
-    font-family: Arial, sans-serif;
-    margin: 30px 0 20px 0;
-    color: rgb(25, 150, 0);
-  }
-  
-  .card .card-text{
-    font-family: Arial, sans-serif;
-    color: rgb(255, 255, 255);
-  }
+.frame-wrapper1 {
+  padding: 0 var(--padding-xs) 0 var(--padding-2xs);
+}
+.doctor-name-background-parent,
+.neurology-parent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: var(--gap-base);
+}
+.doctor-name-background-parent {
+  align-self: stretch;
+  align-items: center;
+  padding: var(--padding-5xl) var(--padding-xl);
+  position: relative;
+  gap: var(--gap-5xs);
+}
+
+.doctors-card {
+  height: 538px;
+  width: 317px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  text-align: left;
+  font-size: var(--body-2-size);
+  color: var(--primary);
+  font-family: var(--small);
+}
