--- a/Frontend/MedLink-App/src/Doctors.css
+++ b/Frontend/MedLink-App/src/Doctors.css
@@ -1,3 +1,10 @@
+.doctors-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
 .doctor-card-background {
   align-self: stretch;
   flex: 1;
@@ -8,22 +15,25 @@
   max-height: 100%;
   object-fit: cover;
 }
+
 .doctor-name-background {
   width: 100%;
   height: 100%;
   position: absolute;
-  margin: 0 !important;
+  margin: 0;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   background-color: var(--accent);
 }
-.doctors-name32 {
+
+.doctors-name {
   position: relative;
   line-height: 140%;
   z-index: 1;
 }
+
 .doctors-name-wrapper {
   display: flex;
   flex-direction: row;
@@ -31,7 +41,8 @@
   justify-content: flex-start;
   padding: 0 var(--padding-11xs);
 }
-.neurology32 {
+
+.polyclinic {
   position: relative;
   letter-spacing: 0.16em;
   text-transform: uppercase;
@@ -42,14 +53,16 @@
 .frame-wrapper1 {
   padding: 0 var(--padding-xs) 0 var(--padding-2xs);
 }
+
 .doctor-name-background-parent,
-.neurology-parent {
+.polyclinic-parent {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   gap: var(--gap-base);
 }
+
 .doctor-name-background-parent {
   align-self: stretch;
   align-items: center;
@@ -69,4 +82,11 @@
   font-size: var(--body-2-size);
   color: var(--primary);
   font-family: var(--small);
+  border: 1px solid rgb(173, 173, 173);
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px #AAABB8;
+  background-color: gainsboro;
+  padding: 5px;
+  margin: 5px;
+  text-align: center;
 }
