--- a/Frontend/MedLink-App/src/index.css
+++ b/Frontend/MedLink-App/src/index.css
@@ -12,6 +12,6 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #3AAFA9;
+  background-color: #ffffff;
 }
 
