--- a/Frontend/MedLink-App/src/Polyclinics.css
+++ b/Frontend/MedLink-App/src/Polyclinics.css
@@ -52,3 +52,99 @@
     left: 0;
     width: 233px;
   }
+
+  .poly-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+  }
+  
+  .poly-card-background {
+    align-self: stretch;
+    flex: 1;
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 75%;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+  
+  .poly-name-background {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    margin: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: var(--accent);
+  }
+  
+  .poly-name {
+    position: relative;
+    line-height: 140%;
+    z-index: 1;
+    font-weight: 700;
+    padding: 2px;
+  }
+  
+  .poly-name-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 0 var(--padding-11xs);
+  }
+  
+  .polyclinic {
+    position: relative;
+    letter-spacing: 0.16em;
+    text-transform: uppercase;
+    font-weight: 400;
+    z-index: 1;
+  }
+  
+  .frame-wrapper1 {
+    padding: 0 var(--padding-xs) 0 var(--padding-2xs);
+  }
+  
+  .poly-name-background-parent,
+  .polyclinic-parent {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: var(--gap-base);
+  }
+  
+  .poly-name-background-parent {
+    align-self: stretch;
+    align-items: center;
+    padding: var(--padding-5xl) var(--padding-xl);
+    position: relative;
+    gap: var(--gap-5xs);
+  }
+  
+  .poly-card {
+    height: 538px;
+    width: 317px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    text-align: left;
+    font-size: var(--body-2-size);
+    color: var(--primary);
+    font-family: var(--small);
+    border: 1px solid rgb(173, 173, 173);
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #AAABB8;
+    background-color: #2E9CCA;
+    padding: 5px;
+    margin: 5px;
+    text-align: center;
+  }
+  
