--- a/Frontend/MedLink-App/src/Appointment.css
+++ b/Frontend/MedLink-App/src/Appointment.css
@@ -1,84 +1,68 @@
-.isim1{
-    margin-top: 20px;
-    margin-left: 20px;
-    font-size: 20px;
-    font-weight: 700;
-    color: #000000;
-
-}
-
-.katman1-randevu {
-  position: relative;
-  width: 400px;
-  height: 600px;
-  background-color: #28ca00;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  text-align: center;
-}
-
-#randevutarihi{
-    margin-top: 20px;
-    margin-left: 20px;
-    font-size: 20px;
-    font-weight: 700;
-    color: #fff;
-    background-color: #ff0000;
-    border-radius: 5px;
-}
-
-#randevusaati{
-    margin-top: 20px;
-    margin-left: 20px;
-    font-size: 20px;
-    font-weight: 700;
-    color: #fff;
-    background-color: #ff0000;
-    border-radius: 5px;
-}
-
-.randevual {
-    width: 50%;
-    height: 45px;
-    background: black;
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 18px;
+  }
+  
+  .polycard {
+    position: relative;
+    overflow: hidden;
+    border: 2px solid transparent;
     cursor: pointer;
-    font-size: 16px;
-    color: #fff;
-    font-weight: 700;
-    margin-top: 40px;
-  }
-
-  .polikliniksec{
-    margin-top: 20px;
-    margin-left: 20px;
-    font-size: 18px;
-    font-weight: 700;
-    color: #fff;
-    background-color: #ff0000;
+    transition: border-color 0.3s;
+    max-width: 350px;
+    height: 450px;
+    background-color: aliceblue;
     border-radius: 10px;
-    width: 320px;
-    font-family: Poppins, sans-serif;
+  }
+  
+  .polycard img {
+    width: 100%;
+    height: 60%;
+  }
+  
+  .polycard-title {
+    text-align: center;
+    margin: 0;
+    padding: 16px 0 8px;
+  }
+  
+  .polycard-text {
+    text-align: center;
+    padding: 0 16px 16px;
+  }
+  
+  .polycard.selected {
+    border-color: rgba(21, 255, 0, 0.623); /* Seçili kartın kenarlık rengi */
+  }
+  
+  .polycard:hover .polycard__overlay {
+    opacity: 1;
+  }
+  
+  .polycard__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s;
   }
 
-  .poliklinikbar{
-    margin-top: 20px;
-    margin-left: 20px;
-    font-size: 20px;
-    font-weight: 500;
-    color: #000000;
-    background-color: #ff0000;
-    border-radius: 10px;
-    font-family: Poppins, sans-serif;
+  .polycard:hover{
+    transform: scale(1.05);
+    transition: transform 0.3s;
   }
-
-#boskutu{
-    display: none;
-}
+  
+  .polycard:active {
+    transform: scale(0.95);
+    transition: transform 0.3s;
+  }
