--- a/Frontend/MedLink-App/src/navbar.css
+++ b/Frontend/MedLink-App/src/navbar.css
@@ -3,12 +3,12 @@
     align-items: center;
     justify-content: left;
     padding: 10px;
-    position: fixed; /* Navbar'ı sabit yapar */
-    top: 0; /* Sayfanın tepesine sabitler */
+    position: fixed;
+    top: 0;
     left: 0;
-    width: 100%; /* Genişliğini %100 yapar */
-    background-color: #25274D; /* Arka plan rengini beyaz yapar, isteğe bağlı olarak değiştirilebilir */
-    z-index: 1000; /* Diğer içeriklerin üstünde olmasını sağlar */
+    width: 100%;
+    background-color: #25274D;
+    z-index: 1000;
 
   }
   
@@ -37,7 +37,7 @@
   
   .dropbtn {
     background-color: #25274D;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding: 16px;
     font-size: 16px;
     border: none;
