--- a/Frontend/MedLink-App/src/navbar.css
+++ b/Frontend/MedLink-App/src/navbar.css
@@ -9,12 +9,12 @@
     width: 100%;
     background-color: #25274D;
     z-index: 1000;
-
   }
   
   .logo {
     font-size: 24px;
     font-weight: bold;
+    margin-right: 15px;
   }
   
   .navbar {
@@ -23,11 +23,18 @@
   }
   
   .navbar a {
-    padding-left: 20px;
+    padding-left: 5px;
     margin: 0 10px;
     text-decoration: none;
     color: white;
-    font-size: 18px;
+    font-size: 17px;
+    min-width: 120px;
+    text-align: center;
+  }
+
+  .navbar a:hover{
+    transition: 0.3s;
+    color: red;
   }
   
   .dropdown {
@@ -40,36 +47,47 @@
     background-color: #25274D;
     color: white;
     padding: 16px;
-    font-size: 18px;
+    font-size: 17px;
     border: none;
     cursor: pointer;
-    min-width: 200px;
+    min-width: 195px;
+    padding-left: 10px;
+    margin: 0 12px;
+  }
+
+  .dropbtn:hover{
+    transition: 0.3s;
+    color: red;
   }
   
   .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: #464866;
-    min-width: 195px;
+    min-width: 190px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
     text-align: center;
     align-items: center;
     justify-content: center;
     color: #fff;
+    margin-left: 15px;
   }
   
   .dropdown-content ol {
     list-style-type: none;
     padding: 0;
-    margin-left: -35px;
+    margin-left: -20px;
     text-align: left;
   }
   
   .dropdown-content ol li {
     padding: 8px 16px;
     text-decoration: none;
-    display: block;
+    display: flex;
+    flex: 1;
+    z-index: 1000;
+    max-width: 202px;
+    text-align: left;
   }
   
   .dropdown:hover .dropdown-content {
@@ -77,8 +95,18 @@
   }
   
   .navbar .adminpanelad{
-    font-size: 18px;
+    font-size: 17px;
     align-items: right;
     justify-content: right;
-    padding-left: 720px;
+    padding-left: 280px;
+  }
+
+  .navbar .haber1{
+    font-size: 17px;
+    min-width: 5px;
+  }
+
+  .navbar .iletisim1{
+    font-size: 17px;
+    min-width: 70px;
   }
