--- a/Frontend/MedLink-App/src/AboutUs.css
+++ b/Frontend/MedLink-App/src/AboutUs.css
@@ -28,7 +28,7 @@ position: relative;
 top: 30px;
 width: 650px;
 height: 250px;
-border: 4px solid blue;
+border: 4px solid #25274D;
 border-radius: 100px;
 }
 
