--- a/Frontend/MedLink-App/src/Contact.css
+++ b/Frontend/MedLink-App/src/Contact.css
@@ -1,9 +1,11 @@
 .mapstyle{
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     margin-top: 50px;
     left: 50px;
     position: relative;
+    border-radius: 50%;
+    border: 10px solid #25274D;
 }
 
 .build{
@@ -12,6 +14,9 @@
     height: 400px;
     display: flex;
     margin-left: 360px;
+    border: 10px solid #25274D;
+    border-top-right-radius: 20%;
+    border-bottom-left-radius: 15%;
 }
 
 #yazi1{
