--- a/Frontend/MedLink-App/src/Appointment.css
+++ b/Frontend/MedLink-App/src/Appointment.css
@@ -1,9 +1,11 @@
 .grid {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     gap: 18px;
     position: relative;
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-bottom: 20px;
   }
   
   .polycard {
@@ -67,3 +69,186 @@
     transform: scale(0.95);
     transition: transform 0.3s;
   }
+
+  .appointment-form{
+    margin-top: 200px;
+    width: 800px;
+    height: 500px;
+    background-color: aqua;
+    display: flex;
+    text-align: center;
+    left: 300px;
+    bottom: 50px;
+    position: relative;
+  }
+
+  #doktoradih2{
+    left: 120px;
+    position: relative;
+    top: 10px;
+    max-width: 786.86px;
+  }
+
+  #tarihdivi{
+    position: relative;
+    right: 275px;
+    top: 85px;
+  }
+
+  #tarihbutonu{
+    position: relative;
+    right: 275px;
+    top: 95px;
+  }
+
+  .appointment-list{
+    position: relative;
+    left: 330px;
+    bottom: 240px;
+  }
+
+  #doktordonus{
+    display: inline-block;
+    padding: 10px 15px;
+    background-color: #000000;
+    color: white;
+    text-decoration: none;
+    border-radius: 7.5px;
+    font-size: 10px;
+    font-family: "Poppins", sans-serif;
+    position: relative;
+    top: -220px;
+  }
+
+  #doktordonus:hover{
+    transition: 0.3s;
+    background-color: rgb(47, 47, 47);
+    cursor: pointer;
+  }
+
+#saatlistesi li{
+  display: inline-block;
+  padding: 10px 15px;
+  background-color: #000000;
+  color: white;
+  text-decoration: none;
+  border-radius: 7.5px;
+  font-size: 15px;
+  font-family: "Poppins", sans-serif;
+  margin: 5px;
+  width: 120px;
+}
+
+#saatlistesi li:hover{
+  transition: 0.3s;
+  background-color: rgb(47, 47, 47);
+  cursor: pointer;
+}
+
+#randevusaatih3{
+  color: #25274D;
+  position: relative;
+  left: -375px;
+  bottom: 150px;
+}
+
+.AppCard-times{
+  max-width: 600px;
+  bottom: 110px;
+  position: relative;
+  left: 120px;
+  margin-right: 600px;
+}
+
+.AppCard-date{
+  position: relative;
+  left: 300px;
+  bottom: 120px;
+  display: inline-block;
+  color: #000000;
+}
+
+
+
+.doccard {
+  position: relative;
+  overflow: hidden;
+  border: 2px solid transparent;
+  cursor: pointer;
+  transition: border-color 0.3s;
+  max-width: 350px;
+  height: 450px;
+  background-color: aliceblue;
+  border-radius: 10px;
+
+}
+
+.doccard img {
+  width: 100%;
+  height: 60%;
+}
+
+.doccard-title {
+  text-align: center;
+  margin: 0;
+  padding: 16px 0 8px;
+}
+
+.doccard-text {
+  text-align: center;
+  padding: 0 16px 16px;
+}
+
+.doccard.selected {
+  border-color: rgba(21, 255, 0, 0.623); /* Seçili kartın kenarlık rengi */
+}
+
+.doccard:hover .doccard__overlay {
+  opacity: 1;
+}
+
+.doccard__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.doccard:hover{
+  transform: scale(1.05);
+  transition: transform 0.3s;
+}
+
+.doccard:active {
+  transform: scale(0.95);
+  transition: transform 0.3s;
+}
+
+#polybutton3{
+  display: inline-block;
+  padding: 10px 15px;
+  background-color: #000000;
+  color: white;
+  text-decoration: none;
+  border-radius: 7.5px;
+  font-size: 10px;
+  font-family: "Poppins", sans-serif;
+  position: relative;
+  top: -25px;
+  right: -25px;
+}
+
+#polybutton3:hover{
+  cursor: pointer;
+  transition: 0.3s;
+  background-color: rgb(30, 30, 30);
+}
