--- a/Frontend/MedLink-App/src/components/Footer.css
+++ b/Frontend/MedLink-App/src/components/Footer.css
@@ -4,7 +4,7 @@ text-align: center;
 
 .yazino2{
     text-align: left;
-    margin-left: 10px;
+    margin-left: 15px;
     position: relative;
     display: flex;
 }
@@ -13,6 +13,7 @@ text-align: center;
     text-align: right;
     position: relative;
     top: -25px;
+    margin-right: 15px;
 }
 
 .yazino4{
