--- a/Frontend/MedLink-App/src/welcome-page.css
+++ b/Frontend/MedLink-App/src/welcome-page.css
@@ -132,3 +132,117 @@
 .grid-item.selected img {
     filter: brightness(0) invert(1);
 }
+
+.yonetim-card {
+    height: 538px;
+    width: 317px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    text-align: left;
+    font-size: var(--body-2-size);
+    color: var(--primary);
+    font-family: var(--small);
+    border: 1px solid rgb(173, 173, 173);
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #AAABB8;
+    background-color: #2E9CCA;
+    padding: 5px;
+    margin: 5px;
+    text-align: center;
+    border: 3px solid black;
+  }
+
+  .yonetim-card-background {
+    align-self: stretch;
+    flex: 1;
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
+    max-height: 75%;
+    object-fit: cover;
+    border-radius: 5px;
+    border-bottom: 2px solid black;
+  }
+  
+  .yonetim-name-background {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    margin: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: var(--accent);
+  }
+  
+  .yonetim-name {
+    position: relative;
+    line-height: 140%;
+    z-index: 1;
+    font-weight: 700;
+    padding: 2px;
+  }
+  
+  .yonetim-name-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 0 var(--padding-11xs);
+  }
+  
+  .yonetim {
+    position: relative;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    font-weight: 500;
+    z-index: 1;
+  }
+  
+  .frame-wrapper1 {
+    padding: 0 var(--padding-xs) 0 var(--padding-2xs);
+  }
+  
+  .yonetim-name-background-parent,
+  .yonetim-parent {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: var(--gap-base);
+  }
+  
+  .yonetim-name-background-parent {
+    align-self: stretch;
+    align-items: center;
+    padding: var(--padding-5xl) var(--padding-xl);
+    position: relative;
+    gap: var(--gap-5xs);
+  }
+
+  .yonetim-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  .title2{
+    color: #1e90ff;
+    font-size: 1.5rem;
+    margin: 0;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .subtitle2{
+    font-size: 2rem;
+    margin: 0;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
