--- a/Frontend/MedLink-App/src/welcome-page.css
+++ b/Frontend/MedLink-App/src/welcome-page.css
@@ -299,7 +299,7 @@
   }
   
   .doctor-card {
-    background: #f9f9f9;
+    background: lightgray;
     padding: 10px;
     border-radius: 5px;
     text-align: center;
