--- a/Frontend/MedLink-App/src/Doctors.css
+++ b/Frontend/MedLink-App/src/Doctors.css
@@ -15,6 +15,8 @@
   overflow: hidden;
   max-height: 100%;
   object-fit: cover;
+  border: 2px solid black;
+  border-radius: 5px;
 }
 
 .doctor-name-background {
@@ -83,9 +85,9 @@
   font-size: var(--body-2-size);
   color: var(--primary);
   font-family: var(--small);
-  border: 1px solid rgb(173, 173, 173);
+  border: 3px solid black;
   border-radius: 10px;
-  box-shadow: 5px 5px 5px #AAABB8;
+  box-shadow: 2px 2px 2px #000000;
   background-color: gainsboro;
   padding: 5px;
   margin: 5px;
