--- a/Frontend/MedLink-App/src/CheckAppointment.css
+++ b/Frontend/MedLink-App/src/CheckAppointment.css
@@ -20,7 +20,7 @@
     font-size: 10px;
     font-family: "Poppins", sans-serif;
     cursor: pointer;
-    margin: 5px;
+    margin: 10px;
 }
 
 .randevukutucukdiv{
@@ -31,3 +31,104 @@
     width: 250px;
     height: auto;
 }
+
+.degerlendirmebutonu{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #000540;
+    color: white;
+    text-decoration: none;
+    border-radius: 7.5px;
+    transition: 0.3s;
+    font-size: 10px;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.degerlendirmebutonu:hover{
+    background-color: rgb(0, 51, 255);
+    transition: 0.4s;
+}
+
+.degerlendirmebutonu:focus{
+    background-color: rgb(0, 51, 255);
+}
+
+.randevudeletebutton:hover{
+    background-color: rgb(0, 51, 255);
+    transition: 0.4s;
+}
+
+.rating-button{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #000540;
+    color: white;
+    text-decoration: none;
+    border-radius: 7.5px;
+    transition: 0.3s;
+    font-size: 10px;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+}
+
+.rating-button:hover{
+    background-color: rgb(0, 51, 255);
+    transition: 0.4s;
+}
+
+.rating-button:focus{
+    background-color: rgb(0, 51, 255);
+}
+
+.popup2{
+    background-color: #1b7372;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgb(0, 0, 0);
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
+
+.popup2.show{
+    display: inline-block;
+}
+
+.overlay3 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.overlay3.show {
+    display: block; /* Show overlay when popup is active */
+}
+
+.close4:hover,
+.close4:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.close4 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .rating-button.deActive {
+    background-color: gray !important;
+    color: white !important; 
+    border: 2px solid red !important;
+    pointer-events: none;
+  }
