--- a/Frontend/MedLink-App/src/Doctors.css
+++ b/Frontend/MedLink-App/src/Doctors.css
@@ -4,6 +4,7 @@
   justify-content: center;
   gap: 20px;
   margin-top: 90px;
+  margin-bottom: 20px;
 }
 
 .doctor-card-background {
@@ -93,3 +94,51 @@
   margin: 5px;
   text-align: center;
 }
+
+.doctors-rating{
+  position: relative;
+  bottom: 5px;
+  left: 5px;
+  margin-top: 2px;
+}
+
+.stars {
+  color: #ccc; /* Boş yıldız rengi */
+}
+
+.star {
+  display: inline-block;
+  position: relative;
+  width: 1em;
+  height: 1em;
+  font-size: 30px;
+  margin-right: 2px;
+  line-height: 1;
+  color: blue;
+}
+
+.doctor-rating[rating] .stars::before {
+  content: '★★★★★';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  color: #ffb400;
+  overflow: hidden;
+  white-space: nowrap;
+  z-index: 1;
+}
+
+
+.doctor-rating[rating="5.00"] .stars::before { width: 100%; }
+.doctor-rating[rating="4.50"] .stars::before { width: 90%; }
+.doctor-rating[rating="4.00"] .stars::before { width: 80%; }
+.doctor-rating[rating="3.50"] .stars::before { width: 70%; }
+.doctor-rating[rating="3.00"] .stars::before { width: 60%; }
+.doctor-rating[rating="2.50"] .stars::before { width: 50%; }
+.doctor-rating[rating="2.00"] .stars::before { width: 40%; }
+.doctor-rating[rating="1.50"] .stars::before { width: 30%; }
+.doctor-rating[rating="1.00"] .stars::before { width: 20%; }
+.doctor-rating[rating="0.50"] .stars::before { width: 10%; }
+.doctor-rating[rating="0.00"] .stars::before {width: 0%; }
