--- a/Frontend/MedLink-App/src/Polyclinics.css
+++ b/Frontend/MedLink-App/src/Polyclinics.css
@@ -151,5 +151,23 @@
     text-align: center;
     border: 3px solid black;
     cursor: pointer;
+    box-shadow: 2px 2px 2px black;
   }
   
+  #poliklinikDonus{
+    padding: 10px 20px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 600;
+    display: block;
+    margin-left: 30px;
+  }
+
+  #poliklinikDonus:hover{
+    transition: 0.3s;
+    background-color: darkgray;
+  }
