--- a/Frontend/MedLink-App/src/welcome-page.css
+++ b/Frontend/MedLink-App/src/welcome-page.css
@@ -226,10 +226,12 @@
   .yonetim-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     gap: 20px;
     margin-top: 20px;
     margin-bottom: 10px;
+    margin-left: 200px;
+    margin-right: 200px;
   }
 
   .title2{
